--- a/HTML+CSS/random.html
+++ b/HTML+CSS/random.html
@@ -82,10 +82,10 @@
     </div>
     <script src="jquery-3.4.1.js"></script>
     <script>
-        $(".header").children().eq(0).text("群里谁最帅");
+        $(".header").children().eq(0).text("计卓一班谁最丑");
         var clock;
         $(".btn1").click(function(){
-            var arr= ["马新航","范程","马新航","金鹏","马新航","朱宇翔","马新航","田丰铭","马新航","小黑"];
+            var arr= ["马新航","朱宇翔","田丰铭","雷金鹏","刘景亮","返程"];
             var i = 0;
             clock = setInterval(function(){
                 $(".header").children().eq(0).text(arr[i++%arr.length]);
