--- a/HTML+CSS/random.html
+++ b/HTML+CSS/random.html
@@ -80,12 +80,12 @@
             </div>
         </div>
     </div>
-    <script src="jquery-3.4.1.js"></script>
+　　<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script>
-        $(".header").children().eq(0).text("谁取外卖");
+        $(".header").children().eq(0).text("谁喝酒");
         var clock;
         $(".btn1").click(function(){
-            var arr= ["马新航","李宽","金鹏","老田","范程"];
+            var arr= ["马少","张少","郭少","张二少"];
             var i = 0;
             clock = setInterval(function(){
                 $(".header").children().eq(0).text(arr[i++%arr.length]);
